chore: 引入 vue-cli-plugin-electron-builder

--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "v3-admin",
   "version": "2.3.6",
-  "homepage": "https://github.com/un-pany/v3-admin",
+  "homepage": "https://github.com/un-pany/v3-admin-electron",
   "scripts": {
     "dev": "vue-cli-service serve",
     "build:test": "vue-cli-service build --mode test",
     "build:prod": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "node ./deploy"
+    "electron:build": "vue-cli-service electron:build",
+    "electron:serve": "vue-cli-service electron:serve",
+    "postinstall": "electron-builder install-app-deps",
+    "postuninstall": "electron-builder install-app-deps"
   },
+  "main": "background.js",
   "dependencies": {
     "@element-plus/icons-vue": "^0.2.4",
     "@mitojs/browser": "^3.0.1",
@@ -28,6 +32,7 @@
     "vuex": "^4.0.2"
   },
   "devDependencies": {
+    "@types/electron-devtools-installer": "^2.2.0",
     "@types/js-cookie": "^2.2.6",
     "@types/lodash": "^4.14.175",
     "@types/nprogress": "^0.2.0",
@@ -44,6 +49,8 @@
     "@vue/eslint-config-typescript": "^7.0.0",
     "babel-loader": "^8.2.2",
     "compression-webpack-plugin": "^6.1.1",
+    "electron": "^13.0.0",
+    "electron-devtools-installer": "^3.1.0",
     "eslint": "^7.32.0",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^11.1.0",
@@ -53,11 +60,11 @@
     "lint-staged": "^10.5.4",
     "sass": "^1.42.1",
     "sass-loader": "^10.2.0",
-    "scp2": "^0.5.0",
     "style-loader": "^3.3.0",
     "style-resources-loader": "^1.4.1",
     "svg-sprite-loader": "^6.0.9",
     "typescript": "^4.5.2",
+    "vue-cli-plugin-electron-builder": "~2.1.1",
     "vue-cli-plugin-style-resources-loader": "^0.1.5",
     "webpackbar": "^5.0.0-3"
   },
