--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "v3-admin",
+  "name": "v3-admin-electron",
   "version": "2.3.6",
   "homepage": "https://github.com/un-pany/v3-admin-electron",
   "scripts": {
