--- a/package.json
+++ b/package.json
@@ -3,14 +3,12 @@
   "version": "2.3.6",
   "homepage": "https://github.com/un-pany/v3-admin-electron",
   "scripts": {
-    "dev": "vue-cli-service serve",
-    "build:test": "vue-cli-service build --mode test",
-    "build:prod": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "electron:build": "vue-cli-service electron:build",
-    "electron:serve": "vue-cli-service electron:serve",
+    "dev": "vue-cli-service electron:serve",
+    "build:test": "vue-cli-service electron:build --mode test",
+    "build:prod": "vue-cli-service electron:build",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "lint": "vue-cli-service lint"
   },
   "main": "background.js",
   "dependencies": {
