chore: 同步 v3-admin 版本 v2.5.0

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
     "types": [
       "node",
       "webpack-env",
-      "element-plus/global", //element-plus 的 Volar 支持
+      "element-plus/global", // Element-Plus 的 Volar 支持
       // "jest"
     ],
     "paths": {
