--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "v3-admin-electron",
-  "version": "2.4.0",
+  "version": "2.5.0",
   "homepage": "https://github.com/un-pany/v3-admin-electron",
   "scripts": {
     "dev": "vue-cli-service electron:serve",
@@ -12,17 +12,17 @@
   },
   "main": "background.js",
   "dependencies": {
-    "@element-plus/icons-vue": "^0.2.6",
+    "@element-plus/icons-vue": "^0.2.7",
     "axios": "^0.24.0",
     "dayjs": "^1.10.7",
-    "element-plus": "1.3.0-beta.7",
+    "element-plus": "^2.0.1",
     "lodash": "^4.17.21",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^6.2.0",
     "screenfull": "^5.2.0",
     "terser-webpack-plugin": "^4.2.3",
-    "vue": "^3.2.29",
+    "vue": "^3.2.30",
     "vue-router": "^4.0.12",
     "vuex": "^4.0.2"
   },
@@ -39,7 +39,7 @@
     "@vue/cli-plugin-typescript": "^4.5.15",
     "@vue/cli-plugin-vuex": "^4.5.15",
     "@vue/cli-service": "^4.5.15",
-    "@vue/compiler-sfc": "^3.2.29",
+    "@vue/compiler-sfc": "^3.2.30",
     "@vue/eslint-config-standard": "^6.1.0",
     "@vue/eslint-config-typescript": "^10.0.0",
     "babel-loader": "^8.2.3",
