chore: 配置国内淘宝源

--- a/.npmrc
+++ b/.npmrc
@@ -1,5 +1,9 @@
+# 请在安装依赖和打包时自行切换这两份配置！
+
+# 解决国内用户 yarn 安装依赖时失败的问题
+# ELECTRON_MIRROR = https://npmmirror.com/mirrors/electron/
+# ELECTRON_BUILDER_BINARIES_MIRROR = https://npmmirror.com/mirrors/electron-builder-binaries/
+
 # 解决国内用户 build 打包时下载依赖失败的问题
-ELECTRON_MIRROR = https://npmmirror.com/mirrors/electron/
-ELECTRON_BUILDER_BINARIES_MIRROR = http://npmmirror.com/mirrors/electron-builder-binaries/
-# 这里的版本号务必和 package.json 中保持同步，且这里的版本号前面必须有一个字符 'v'，不然打包会出现 404 找不到资源的情况
-ELECTRON_CUSTOM_DIR = "v17.0.1"
+ELECTRON_MIRROR = https://npmmirror.com/mirrors/electron/v
+ELECTRON_BUILDER_BINARIES_MIRROR = https://npmmirror.com/mirrors/electron-builder-binaries/v
