chore: 配置国内淘宝源

--- a/.npmrc
+++ b/.npmrc
@@ -1,9 +1,3 @@
-# 请在安装依赖和打包时自行切换这两份配置！
-
-# 解决国内用户 yarn 安装依赖时失败的问题
-# ELECTRON_MIRROR = https://npmmirror.com/mirrors/electron/
-# ELECTRON_BUILDER_BINARIES_MIRROR = https://npmmirror.com/mirrors/electron-builder-binaries/
-
-# 解决国内用户 build 打包时下载依赖失败的问题
-ELECTRON_MIRROR = https://npmmirror.com/mirrors/electron/v
-ELECTRON_BUILDER_BINARIES_MIRROR = https://npmmirror.com/mirrors/electron-builder-binaries/v
+# 解决国内用户下载 electron 相关依赖时失败的问题
+ELECTRON_MIRROR = https://npmmirror.com/mirrors/electron/
+ELECTRON_BUILDER_BINARIES_MIRROR = https://npmmirror.com/mirrors/electron-builder-binaries/
